opa/operatioanal/cpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-approved-image
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
