opa/operatioanal/vpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-unapproved-image
spec:
  containers:
    - name: nginx
      image: gcr.io/example.com/my-project/nginx
