opa/operatioanal/constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImages
metadata:
  name: allow-approved-images
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
